  the returned row belongs to which class positionally, so if two
  columns have the same name, they are passed to the correct classes.

  You can also provide explicit mappings from an item in the result
  rows to a class's attribute, which is handy if you want to map the
  results of an arbitrary query to a set of classes. See the
  Fey::Object::Iterator docs for more details.


0.11   2008-09-20

- Fixes to work with Moose 0.58.


0.10   2008-09-07

- Moose 0.57 broke Fey::ORM somehow. Fixed for Moose 0.57.


0.09   2008-09-01

- Changes to work with the latest Moose and Fey.


0.08   2008-06-27

- Changes to the immutable bits to work with the latest Moose (0.51).


0.07   2008-06-22

- Cached has_one and has_many attributes now have a private clearer.

- Various internals changes so that the meta classes now have more
  attributes, rather than creating lots of class attributes in the
  classes which use Fey::ORM::{Table,Schema}.

- Added Fey::Meta::Attribute::FromSelect. This allows you to easily
  define an attribute's default based on a SELECT query.


0.06   2008-05-25

- Factored part of Fey::ORM::Table->_get_column_values into a separate
  method, _set_column_values_from_hashref, since this piece is
  something that subclasses may want to reuse.

- Added a horrible hack to make Postgres BYTEA columns work. Needs
  some serious refactoring. This may well disappear in a future
  version.

- Fixed to work with the most recent versions of Moose, which are now
  prereqs.


0.05   2008-04-18   

- Fey::Object::Table called a method on Fey::Meta::Class::Table
  without loading it, which could cause problems in some cases.

- Moved exceptions to Fey::ORM::Exceptions so you can use them in your
  classes, notably the NoSuchRow exception.

- Made Fey::Object::Table and Fey::Object::Schema extend
  MooseX::Object::StrictConstructor rather than Moose::Object.


0.04   2008-03-06

- Add a private writers for accessors created via has_one() and