@@ -27,6 +27,9 @@
   results of an arbitrary query to a set of classes. See the
   Fey::Object::Iterator docs for more details.
 
+- Fey::Object::Table->insert_many() Would modify the hash references
+  it received when a table had auto-incremented columns.
+
 
 0.11   2008-09-20
 
